<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CalibrationInfo" Id="{541b595d-1749-496d-8e91-49da7b75a7be}">
    <Declaration><![CDATA[TYPE ST_CalibrationInfo :
STRUCT
	calibrationNumber  : DINT;
    userID             : STRING;
    density            : REAL;
    solvent            : STRING;
    pump               : STRING;
    sysMasterListRev   : DINT;
    solventRevision    : DINT;
    allowableFailures  : DINT;
    replicates         : DINT;
    calIntervalDays    : DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>